# sunone_aimbot_2

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  sunone_aimbot_2.sln
.opencode/: PLUGIN_SETUP_SUMMARY.md  Verify-Superpowers.ps1  opencode.json
.opencode/agents/: agent-creator.md  build.md  code-analyzer.md  code-reviewer.md  image-analyzer.md  kernel-driver.md  log-analyzer.md  research-synthesizer.md  researcher.md  skill-checker.md  skill-creator.md
.opencode/context-mode-main/: package-lock.json
.opencode/context-mode-main/hooks/gemini-cli/: beforetool.mjs
.opencode/context-mode-main/src/: opencode-plugin.ts  server.ts
.opencode/context-mode-main/src/native-tools/: ctx_stats.ts  ctx_upgrade.ts  shared.ts
.opencode/context-mode-main/tests/core/: manager.test.ts
.opencode/plugins/: CONTEXT-MODE-FINAL.md  README.md  cpp-helper.ts
.opencode/plugins/context-mode/: TESTING.md
.opencode/plugins/context-mode/src/: types.ts
.opencode/plugins/context-mode/tests/: cli-bundle.test.ts
.opencode/plugins/tool-search/: README.md  tool-registry.ts  tool-search.ts
.opencode/plugins/tool-search/scripts/: Analyze-Includes.ps1  Build-Cuda.ps1  Build-Dml.ps1  Check-Cpp.ps1  Find-Headers.ps1  Search-Symbols.ps1
.opencode/plugins/tool-search/tools/: analyzeIncludes.ts  checkCpp.ts  findHeaders.ts  getBuildCommand.ts  searchSymbols.ts
.opencode/skills/agent-creator/: SKILL.md
.opencode/skills/clean-code/: SKILL.md
.opencode/skills/deep-research/: SKILL.md
.opencode/skills/imgui-cpp/: SKILL.md
.opencode/skills/kernel-driver/: SKILL.md
.opencode/skills/oc-plugin-creator/: SKILL.md
SAM3TensorRT/: .gitignore  README.md  RESEARCH.md  WINDOWS_SAM3_PROMPT_TEST_GUIDE.md
SAM3TensorRT/UI/: UI_DESIGN_SPEC.md  package-lock.json  package.json
SAM3TensorRT/UI/public/: index.html
SAM3TensorRT/UI/src/: App.tsx  index.css
SAM3TensorRT/cpp/: CMakeLists.txt
SAM3TensorRT/cpp/include/: prepost.cuh  sam3.cuh  sam3.hpp
SAM3TensorRT/cpp/src/sam3/sam3_apps/: sam3_pcs_app.cpp
SAM3TensorRT/cpp/src/sam3/sam3_trt/: prepost.cu  sam3.cu
SAM3TensorRT/docker/: Dockerfile.x86
SAM3TensorRT/docs/: CPP_CLIP_TOKENIZER_IMPLEMENTATION_PLAN.md
SAM3TensorRT/python/: build_sam3_engine.py  download_sam3_pytorch.py  onnxexport.py  requirements.txt  sam3_download_and_convert.ps1  setup_sam3.py  tokenize_prompt.py
SAM3TensorRT/python/pipeline/: __init__.py  config.py  download.py  engine_build.py  onnx_export.py  utils.py
SAM3TensorRT/python/tests/: __init__.py  test_config.py
docs/: CODEBASE_ANALYSIS.md  SAM3_AUTO_LABELING_INTEGRATION.md  SAM3_MODEL_DOWNLOAD_CONVERSION.md  YOLO26_RESEARCH.md  build.md  cuda-build-run.md  guides.md  model-conversion-pipeline.md
docs/superpowers/plans/: 2025-03-18-vigembus-controller-integration.md  2026-03-12-yolo26-migration.md  2026-03-13-detection-debug-editor-tools.md  2026-03-13-sam3-training-label-implementation.md  2026-03-13-yolo26-alignment-debug-tools.md  2026-03-14-model-folder-dropdowns-implementation.md  2026-03-14-sam3-capture-preview-overlay-and-debug-implementation.md  2026-03-14-sam3-person-preset-phase1-implementation.md  2026-03-14-sam3-training-mode-switch-implementation.md  2026-03-15-context-mode-opencode-native-plugin.md  2026-03-15-sam3-dynamic-preset-system-implementation.md  2026-03-16-sam3-bounding-box-implementation.md  2026-03-16-sam3-game-overlay-detection-display.md  2026-03-17-sam3-setup-orchestration.md  2026-03-18-sam3-video-labeler.md
docs/superpowers/specs/: 2025-03-18-vigembus-controller-design.md  2026-03-12-yolo26-migration-design.md  2026-03-13-detection-debug-editor-tools-design.md  2026-03-13-sam3-training-label-design.md  2026-03-13-yolo26-alignment-debug-tools-design.md  2026-03-14-model-folder-dropdowns-design.md  2026-03-14-sam3-capture-preview-overlay-and-debug-design.md  2026-03-14-sam3-person-preset-phase1-design.md  2026-03-14-sam3-training-mode-switch-design.md  2026-03-15-context-mode-opencode-native-plugin-design.md  2026-03-15-sam3-dynamic-preset-system-design.md  2026-03-16-sam3-bounding-box-design.md  2026-03-16-sam3-game-overlay-detection-display-design.md  2026-03-17-sam3-setup-orchestration-design.md  2026-03-18-sam3-video-labeler-design.md
models/presets/: default.json
scripts/: README.md  build_sam3_presets.py  load_hf_token.bat  requirements.txt
scripts/custom_dataset/: README.md  predefined_classes.txt  start_train.bat
scripts/export/: README.md  export_yolo26.ps1  export_yolo26.py  export_yolo26.sh
scripts/labelImg/: README.md  labelImg.py  requirements.txt  run.bat
scripts/labelImg/data/: predefined_classes.txt
scripts/labelImg/libs/: canvas.py  constants.py  create_ml_io.py  default_label_combobox.py  hashableQListWidgetItem.py  labelDialog.py  labelFile.py  lightWidget.py  pascal_voc_io.py  settings.py  shape.py  stringBundle.py  utils.py  yolo_io.py  zoomWidget.py
sunone_aimbot_2/: packages.config  sunone_aimbot_2.cpp  sunone_aimbot_2.h
sunone_aimbot_2/capture/: capture.cpp
sunone_aimbot_2/config/: config.cpp  config.h
sunone_aimbot_2/debug/: detection_debug_export.cpp  detection_debug_export.h  detection_debug_state.cpp  detection_debug_state.h
sunone_aimbot_2/detector/: detection_buffer.h  dml_detector.cpp  dml_detector.h  trt_detector.cpp  trt_detector.h  yolo26_decode.cpp  yolo26_decode.h
sunone_aimbot_2/include/: other_tools.h
sunone_aimbot_2/overlay/: draw_ai.cpp  draw_debug.cpp  draw_game_overlay.cpp  draw_settings.h  draw_stats.cpp  draw_training.cpp  overlay.cpp  sam3_preview_render_rules.h
sunone_aimbot_2/scr/: other_tools.cpp
sunone_aimbot_2/training/: training_dataset_manager.cpp  training_dataset_manager.h  training_inference_mode.h  training_label_runtime.cpp  training_label_runtime.h  training_label_types.h  training_sam3_labeler.h  training_sam3_labeler_stub.cpp  training_sam3_labeler_trt.cpp  training_sam3_preset_loader.cpp  training_sam3_preset_loader.h  training_sam3_runtime.cpp  training_sam3_runtime.h
tests/: detection_debug_tools_test.cpp  training_labeling_tests.cpp
tools/: build_opencv_cuda.ps1
(+42 files in other folders)
